tests/NormalTests/paczka1/small_fuzzy/20413682.err
Error in line 3: zOwbSu A267 64,60
Error in line 2: UAg A276 82,3
Error in line 11: hrj A276 79,2
